Support 12 hours format for TimeField (fix timefield layout wrap) #2347

--- a/modules/web/themes/halo/components/timefield/timefield.scss
+++ b/modules/web/themes/halo/components/timefield/timefield.scss
@@ -19,6 +19,10 @@ $c-timefield-minute-width: 58px;
 $c-timefield-second-width: 84px;
 
 @mixin halo-cuba-timefield($primary-stylename: c-timefield) {
+  .#{$primary-stylename}-layout {
+    white-space: nowrap;
+  }
+
   .#{$primary-stylename} {
     @include box-defaults;
     @include valo-textfield-style;
@@ -55,6 +59,6 @@ $c-timefield-second-width: 84px;
 
   .#{$primary-stylename}-ampm {
     width: 70px;
-    margin-left: $v-layout-spacing-horizontal;
+    margin-left: $v-layout-spacing-horizontal/2;
   }
 }
